K1J-1525: Add Spotless code formatter and reformat project (#274)